syntax = "proto3";

package com.tservice.proto.domain;

option java_multiple_files = true;

import "google/protobuf/empty.proto";

service DomainService {
    rpc create(CreateProto) returns (DomainProto);
    rpc update(UpdateProto) returns (DomainProto);
    rpc delete(DeleteProto) returns (google.protobuf.Empty);
    rpc findById(FindByIdProto) returns (DomainProto);
    rpc findAll(FindAllProto) returns (stream DomainProto);
    rpc findByName(FindByNameProto) returns (stream DomainProto);
    rpc findByValue(FindByValueProto) returns (stream DomainProto);
}

message DomainProto {
    string id = 1;
    string name = 2;
    string value = 3;
}

message CreateProto {
    string name = 1;
    string value = 2;
}

message UpdateProto {
    string id = 1;
    string name = 2;
    string value = 3;
}

message DeleteProto {
    string id = 1;
}

message FindByIdProto {
    string id = 1;
}

message FindAllProto {}

message FindByNameProto {
    string name = 1;
}

message FindByValueProto {
    string value = 1;
}
